assets/queries/cloudFormation/aws/security_groups_allows_unrestricted_outbound_traffic/test/negative1.yaml
Resources:
  Negative1_security_group:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref MyVPC
      SecurityGroupEgress:
        - IpProtocol: tcp  # protocol is not "-1"
          FromPort: 2000
          ToPort: 2000
          CidrIp: 0.0.0.0/0
        - IpProtocol: "-1" 
          FromPort: 2000
          ToPort: 2000
          CidrIp: 192.162.0.0/16  # cidr is not 0.0.0.0/0

  # Standalone IPv4 egress rules
  Negative1_egress_ipv4_1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref Negative1_security_group
      IpProtocol: tcp  # protocol is not "-1"
      FromPort: 3000
      ToPort: 3000
      CidrIp: 0.0.0.0/0
  
  Negative1_egress_ipv4_2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref Negative1_security_group
      IpProtocol: "-1"
      FromPort: 3000
      ToPort: 3000
      CidrIp: 192.162.0.0/16  # cidr is not 0.0.0.0/0

  # Standalone IPv6 egress rules
  Negative1_egress_ipv6_1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref Negative1_security_group
      IpProtocol: tcp  # protocol is not "-1"
      FromPort: 4000
      ToPort: 4000
      CidrIpv6: ::/0
    
  Negative1_egress_ipv6_2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref Negative1_security_group
      IpProtocol: "-1"
      FromPort: 4000
      ToPort: 4000
      CidrIpv6: 2001:0db8::/32 # cidr is not ::/0
