assets/queries/cloudFormation/aws/security_groups_allows_unrestricted_outbound_traffic/test/positive1.yaml
Resources:
  Positive1_security_group:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref MyVPC
      SecurityGroupEgress:
        - IpProtocol: "-1"
          FromPort: 2000
          ToPort: 2000
          CidrIp: 0.0.0.0/0

  # Standalone IPv4 egress rule
  Positive1_egress_ipv4:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref Positive1_security_group
      IpProtocol: "-1"
      FromPort: 3000
      ToPort: 3000
      CidrIp: 0.0.0.0/0

  # Standalone IPv6 egress rule
  Positive1_egress_ipv6:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref Positive1_security_group
      IpProtocol: "-1"
      FromPort: 4000
      ToPort: 4000
      CidrIpv6: ::/0
